--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title> nwt </title>
+	<!-- Device Scaling -->
+	<meta name = "viewport" content = "width = device-width, initial scale = 1.0">
+	<!-- CSS -->
+	<link rel = "stylesheet" type = "text/css" href = "style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+
+</head>
+<body>
+
+	<!--Main Page-->
+	<div class = "main-page">
+		<!--Navigation Bar-->
+		<div class = "navbar">
+			<div class = "bar-item">
+				<a href = "photography.html">Photography</a>
+			</div>	
+			<div class = "bar-item">
+				<a href = "stuff/Website_Resume.pdf">Resume</a>
+			</div>		
+			<div class = "bar-item">
+				<a href = "projects.html">Projects</a>
+			</div>
+			<div class = "bar-item">
+				<a href = "about2.html">About Me</a>
+			</div>
+			<div id = "home" class = "bar-item">
+				<a href = "index.html">Kevin</a>
+			</div>
+		</div>
+		<div class = "main-pic">
+ 			<div class = "title"> Kevin Tang </div>
+			<div class = "subtitle"> Aspiring astronomer and programmer.</div>
+			<div id = "invite" class = "subtitle"> Let's get in touch. </div>
+			<!--Social Media Links-->
+			<div class = "media-buttons-area"> 
+				<a href = "mailto:kevintang129@gmail.com" class = "fa fa-envelope-o"> </a>
+				<a href = "https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=kevintang129@gmail.com" class = "fa fa-google">
+				</a>
+				<a href = "https://www.linkedin.com/in/kevin-tang-870372141/" class = "fa fa-linkedin"> </a>
+				<a href = "https://github.com/kevintang129" class = "fa fa-github"> </a>
+				<a href = "https://open.spotify.com/user/1218201605" class = "fa fa-spotify"></a>
+				</div>
+			</div> 
+			<!-- <footer> Built by Kevin -->
+		</div>
+	</div>
+</body>
+</html>
