--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> nwt </title>
+	<title> Home </title>
 	<!-- Device Scaling -->
 	<meta name = "viewport" content = "width = device-width, initial scale = 1.0">
 	<!-- CSS -->
@@ -29,13 +29,13 @@
 				<a href = "about2.html">About Me</a>
 			</div>
 			<div id = "home" class = "bar-item">
-				<a href = "index.html">Kevin</a>
+				<a href = "index.html">Home</a>
 			</div>
 		</div>
 		<div class = "main-pic">
- 			<div class = "title"> Kevin Tang </div>
-			<div class = "subtitle"> Aspiring astronomer and programmer.</div>
-			<div id = "invite" class = "subtitle"> Let's get in touch. </div>
+ 			<div class = "title"> Welcome </div>
+			<!-- <div class = "subtitle"> Aspiring astronomer and programmer.</div> -->
+			<!-- <div id = "invite" class = "subtitle"> Let's get in touch. </div> -->
 			<!--Social Media Links-->
 			<div class = "media-buttons-area"> 
 				<a href = "mailto:kevintang129@gmail.com" class = "fa fa-envelope-o"> </a>
