--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 	<div class = "main-page">
 		<!--Navigation Bar-->
 		<div class = "navbar">
-			<div class = "bar-item">
+			<!-- <div class = "bar-item">
 				<a href = "photography.html">Photography</a>
-			</div>	
-			<div class = "bar-item">
+			</div>	 -->
+			<div class = "bar-item" id = "resume">
 				<a href = "stuff/Website_Resume.pdf">Resume</a>
 			</div>		
-			<div class = "bar-item">
+			<div class = "bar-item" id = "projects">
 				<a href = "projects.html">Projects</a>
 			</div>
-			<div class = "bar-item">
-				<a href = "about2.html">About Me</a>
+			<div class = "bar-item" id= "about">
+				<a href = "about2.html">About</a>
 			</div>
 			<div id = "home" class = "bar-item">
 				<a href = "index.html">Home</a>
