--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!-- CSS -->
 	<link rel = "stylesheet" type = "text/css" href = "style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
 </head>
 <body>
