--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 				<a href = "photography.html">Photography</a>
 			</div>	 -->
 			<div class = "bar-item" id = "resume">
-				<a href = "stuff/Website_Resume.pdf">Resume</a>
+				<a href = "stuff/Website_Resume.pdf" id = "resume-link">Resume</a>
 			</div>		
 			<div class = "bar-item" id = "projects">
-				<a href = "projects.html">Projects</a>
+				<a href = "projects.html" id = "projects-link">Projects</a>
 			</div>
 			<div class = "bar-item" id= "about">
-				<a href = "about2.html">About</a>
+				<a href = "about2.html" id = "about-link">About</a>
 			</div>
 			<div id = "home" class = "bar-item">
-				<a href = "index.html">Home</a>
+				<a href = "index.html" id = "home-link">Home</a>
 			</div>
 		</div>
 		<div class = "main-pic">
