--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title> Home </title>
 	<!-- Device Scaling -->
 	<meta name = "viewport" content = "width = device-width, initial scale = 1.0">
+	<!-- Language Support -->
+	<meta charset="utf-8"> 
 	<!-- CSS -->
 	<link rel = "stylesheet" type = "text/css" href = "style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -34,9 +36,7 @@
 			</div>
 		</div>
 		<div class = "main-pic">
- 			<div class = "title"> Welcome </div>
-			<!-- <div class = "subtitle"> Aspiring astronomer and programmer.</div> -->
-			<!-- <div id = "invite" class = "subtitle"> Let's get in touch. </div> -->
+ 			<div class = "title"> ようこそ </div>
 			<!--Social Media Links-->
 			<div class = "media-buttons-area"> 
 				<a href = "mailto:kevintang129@gmail.com" class = "fa fa-envelope-o"> </a>
@@ -47,7 +47,6 @@
 				<a href = "https://open.spotify.com/user/1218201605" class = "fa fa-spotify"></a>
 				</div>
 			</div> 
-			<!-- <footer> Built by Kevin -->
 		</div>
 	</div>
 </body>
