--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
 			</div>
 		</div>
 		<div class = "main-pic">
- 			<div class = "title"> ようこそ </div>
+ 			<div class = "title">
+				<div class = "titles">Welcome</div>
+				<!-- <div class="title-chn">欢迎</div> -->
+				<div class = "titles">ようこそ</div>
+			</div>
 			<!--Social Media Links-->
 			<div class = "media-buttons-area"> 
 				<a href = "mailto:kevintang129@gmail.com" class = "fa fa-envelope-o"> </a>
