--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="fade.js"></script>
 </head>
 <body>
 
@@ -38,7 +39,7 @@
 		<div class = "main-pic">
  			<div class = "title">
 				<div class = "titles">Welcome</div>
-				<!-- <div class="title-chn">欢迎</div> -->
+				<div class = "titles">欢迎</div>
 				<div class = "titles">ようこそ</div>
 			</div>
 			<!--Social Media Links-->
