--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<div class = "main-pic">
  			<div class = "title">
 				<div class = "titles">Welcome</div>
-				<!-- <div class = "titles">欢迎</div> -->
+				<div class = "titles">欢迎</div>
 				<div class = "titles">ようこそ</div>
 			</div>
 			<!--Social Media Links-->
