--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title> Home </title>
 	<!-- Device Scaling -->
-	<meta name = "viewport" content = "width = device-width, initial scale = 1.0">
+	<meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
 	<!-- Language Support -->
 	<meta charset="utf-8"> 
 	<!-- CSS -->
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="fade.js"></script>
 </head>
 <body>
