--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
 	<div class = "main-page">
 		<!--Navigation Bar-->
 		<div class = "navbar">
-			<!-- <div class = "bar-item">
-				<a href = "photography.html">Photography</a>
-			</div>	 -->
 			<div class = "bar-item" id = "resume">
 				<a href = "stuff/Website_Resume.pdf" id = "resume-link">RESUME</a>
 			</div>		
@@ -29,7 +26,7 @@
 				<a href = "projects.html" id = "projects-link">PROJECTS</a>
 			</div>
 			<div class = "bar-item" id= "about">
-				<a href = "about2.html" id = "about-link">ABOUT</a>
+				<a href = "about.html" id = "about-link">ABOUT</a>
 			</div>
 			<div id = "home" class = "bar-item">
 				<a href = "index.html" id = "home-link">HOME</a>
@@ -47,7 +44,7 @@
 				<a href = "https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=kevintang129@gmail.com" class = "fa fa-google">
 				</a>
 				<a href = "https://www.linkedin.com/in/kevin-tang-870372141/" class = "fa fa-linkedin"> </a>
-				<a href = "https://github.com/kevintang129" class = "fa fa-github"> </a>
+				<a href = "https://github.com/nwtang" class = "fa fa-github"> </a>
 				<a href = "https://open.spotify.com/user/1218201605" class = "fa fa-spotify"></a>
 				</div>
 			</div> 
