--- a/about.html
+++ b/about.html
@@ -34,12 +34,15 @@
 	<div class = "big-container">
 		<div class = "left-side"></div>	
 		<div class = "right-side"> 
-			<div class = "about-title"> Hello </div>
+			<div class = "titles"> I am... </div>
+			<div class = "titles"> 我是... </div>
+			<div class = "titles"> 私は... </div>
 			<div class = "paragraph"></div>
 			<div class = spotify-player>
 				<iframe id = player style = "z-index:10;" src="https://open.spotify.com/embed/user/1218201605/playlist/6PTCecug3Sro3BsjE66nTR" width="50%" height="80vh" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 			</div>
 		</div>
- 	</div>
+	 </div>
+	 <script src="fade.js" type="text/javascript"></script>
 </body>
 </html>
