--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </head>
 <body>
 	<!--Main Page-->
-	<div class = "main-page">
+	<main class = "main-page">
 		<!--Navigation Bar-->
-		<div class = "navbar">
+		<nav class = "navbar">
 			<div class = "bar-item" id = "resume">
 				<a href = "stuff/Website_Resume.pdf" id = "resume-link">RESUME</a>
 			</div>		
@@ -31,25 +31,23 @@
 			<div id = "home" class = "bar-item">
 				<a href = "index.html" id = "home-link">HOME</a>
 			</div>
-		</div>
-		<div class = "main-pic">
+		</nav>
+		<section class = "main-pic">
  			<div class = "title">
 				<div class = "titles">Welcome</div>
 				<div class = "titles">欢迎</div>
 				<div class = "titles">ようこそ</div>
 			</div>
 			<!--Social Media Links-->
-			<div class = "media-buttons-area"> 
-				<a href = "mailto:kevintang129@gmail.com" class = "fa fa-envelope-o"> </a>
-				<a href = "https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=kevintang129@gmail.com" class = "fa fa-google">
-				</a>
-				<a href = "https://www.linkedin.com/in/kevin-tang-870372141/" class = "fa fa-linkedin"> </a>
+			<!-- <div class = "media-buttons-area"> 
+				<a href = "mailto:nick.w.tang@gmail.com" class = "fa fa-envelope-o"> </a>
+				<a href = "https://www.linkedin.com/in/nick-tang-ab3a0754/" class = "fa fa-linkedin"> </a>
 				<a href = "https://github.com/nwtang" class = "fa fa-github"> </a>
-				<a href = "https://open.spotify.com/user/1218201605" class = "fa fa-spotify"></a>
+				<a href = "https://open.spotify.com/user/nick.w.tang" class = "fa fa-spotify"></a>
 				</div>
-			</div> 
-		</div>
-	</div>
+			</div>  -->
+		</section>
+	</main>
 	<script src="fade.js" type="text/javascript"></script>
 </body>
 </html>
