--- a/index.html
+++ b/index.html
@@ -21,15 +21,19 @@
 		<nav class = "navbar">
 			<div class = "bar-item" id = "resume">
 				<a href = "stuff/Website_Resume.pdf" id = "resume-link">RESUME</a>
+				<a href = "resume.html" id = "resume-link-icon" class = "fa fa-id-card"></a>
 			</div>		
 			<div class = "bar-item" id = "projects">
 				<a href = "projects.html" id = "projects-link">PROJECTS</a>
+				<a href = "projects.html" id = "projects-link-icon" class = "fa fa-bar-chart"></a>
 			</div>
 			<div class = "bar-item" id= "about">
 				<a href = "about.html" id = "about-link">ABOUT</a>
+				<a href = "about.html" id = "about-link-icon" class = "fa fa-user"></a>
 			</div>
-			<div id = "home" class = "bar-item">
+			<div class = "bar-item" id = "home">
 				<a href = "index.html" id = "home-link">HOME</a>
+				<a href = "index.html" id = "home-link-icon" class = "fa fa-home">HOME</a>
 			</div>
 		</nav>
 		<section class = "main-pic">
