--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
 		<!--Navigation Bar-->
 		<nav class = "navbar">
 			<div class = "bar-item" id = "resume">
-				<a href = "stuff/Website_Resume.pdf" id = "resume-link">RESUME</a>
+				<a href = "resume.html" id = "resume-link" class = "nav-link">RESUME</a>
 				<a href = "resume.html" id = "resume-link-icon" class = "fa fa-id-card"></a>
 			</div>		
 			<div class = "bar-item" id = "projects">
-				<a href = "projects.html" id = "projects-link">PROJECTS</a>
+				<a href = "projects.html" id = "projects-link" class = "nav-link">PROJECTS</a>
 				<a href = "projects.html" id = "projects-link-icon" class = "fa fa-bar-chart"></a>
 			</div>
 			<div class = "bar-item" id= "about">
-				<a href = "about.html" id = "about-link">ABOUT</a>
+				<a href = "about.html" id = "about-link" class = "nav-link">ABOUT</a>
 				<a href = "about.html" id = "about-link-icon" class = "fa fa-user"></a>
 			</div>
 			<div class = "bar-item" id = "home">
-				<a href = "index.html" id = "home-link">HOME</a>
-				<a href = "index.html" id = "home-link-icon" class = "fa fa-home">HOME</a>
+				<a href = "index.html" id = "home-link" class = "nav-link">HOME</a>
+				<a href = "index.html" id = "home-link-icon" class = "fa fa-home"></a>
 			</div>
 		</nav>
 		<section class = "main-pic">
