--- a/index.html
+++ b/index.html
@@ -37,19 +37,18 @@
 			</div>
 		</nav>
 		<section class = "main-pic">
- 			<div class = "title">
+ 			<section class = "title">
 				<div class = "titles">Welcome</div>
 				<div class = "titles">欢迎</div>
 				<div class = "titles">ようこそ</div>
-			</div>
+			 </section>
 			<!--Social Media Links-->
-			<!-- <div class = "media-buttons-area"> 
-				<a href = "mailto:nick.w.tang@gmail.com" class = "fa fa-envelope-o"> </a>
-				<a href = "https://www.linkedin.com/in/nick-tang-ab3a0754/" class = "fa fa-linkedin"> </a>
+			<section class = "media-buttons-area"> 
+				<a href = "mailto:nwtang13@gmail.com" class = "fa fa-envelope-o"> </a>
+				<!-- <a href = "https://www.linkedin.com/in/nick-tang-ab3a0754/" class = "fa fa-linkedin"> </a> -->
 				<a href = "https://github.com/nwtang" class = "fa fa-github"> </a>
-				<a href = "https://open.spotify.com/user/nick.w.tang" class = "fa fa-spotify"></a>
-				</div>
-			</div>  -->
+				<a href = "https://open.spotify.com/user/nwtang13" class = "fa fa-spotify"></a>
+			</section>
 		</section>
 	</main>
 	<script src="fade.js" type="text/javascript"></script>
